test/sematest/valid/smallest_int.java
class A {
  public static void main(String[] args) {
    System.out.println(-2147483648);
    System.out.println(-           2147483648);
    System.out.println(-







            2147483648);
    System.out.println(- /* dfg ( */ 2147483648 /* ) */);
    System.out.println(-


                    /* dfg ( */ 2147483648

            /* ) */);
  }
}
