test/sematest/invalid/sysoutprintln5.java
class Test {
  public static void main(String[] args) {}
  public void test() {
    System.out.println(1).println(1);
  }
}
